--- a/views/search_page.html
+++ b/views/search_page.html
@@ -30,29 +30,10 @@
 	  </div>
 	</nav>
 
-  <div id="card-container">
-    <div class="card mb-3 listing">
-      <div class="row no-gutters">
-        <div class="col-md-2">
-          <img src="../book_images/thermodynamics_cengel.jpg" class="card-img" alt="...">
-        </div>
-        <div class="col-md-10">
-          <div class="card-body">
-            <div class="row">
-              <h4 class="col card-title">Book Cellar</h4>
-              <h5 class="col card-title edition">2nd. Edition</h5>
-            </div>
-            <div class="row">
-              <p class="col card-text authors">Davis Robertson, William H. Fagan</p>
-              <p class="col card-text date">1998</p>
-            </div>
-            <br>
-            <p class="card-text"><small class="text-muted">Language: English</small></p>
-            <p class="card-text"><small class="text-muted">ID: 142129</small></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <a style="padding: 10px;" href="chat_page.html"><img src="../assets/imgs/chat-icon.svg" alt="" height="50"></a>
+
+  <div id="listing-container"></div>
 
 </body>
+
+<script src="../assets/apps/search.js"></script>
