--- a/assets/styles/menuBar.css
+++ b/assets/styles/menuBar.css
@@ -11,7 +11,7 @@ form.searchBar {
 form.searchBar input[type=text] {
   padding: 5px;
   font-size: 17px;
-  border: 1px solid grey;
+  border: none;
   float: left;
   width: 90%;
   background: #f1f1f1;
@@ -27,7 +27,7 @@ form.searchBar button {
   background: #5b218a;
   color: white;
   font-size: 17px;
-  border: 1px solid grey;
+  border: none;
   border-left: none; /* Prevent double borders */
   cursor: pointer;
   border-top-right-radius: 7px;
